--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
             "class-variance-authority": "^0.7.1",
             "clsx": "*",
             "cmdk": "^1.1.1",
+            "date-fns": "^4.1.0",
             "dotenv": "^17.2.3",
             "embla-carousel-react": "^8.6.0",
             "input-otp": "^1.4.2",
@@ -54,6 +55,8 @@
       },
       "devDependencies": {
             "@types/node": "^20.10.0",
+            "@types/react": "^19.2.9",
+            "@types/react-dom": "^19.2.3",
             "@vitejs/plugin-react-swc": "^3.10.2",
             "tsx": "^4.21.0",
             "vite": "6.3.5"
